syntax = "proto3";

package mondane.mail;
option go_package = "mail/proto";

service MailService {
    rpc SendMail(Mail) returns (Response) {}
};


message Mail {
    string recipient = 1;
    string subject = 2;
    string message = 3;
}

message Response {}

